--- a/english.html
+++ b/english.html
@@ -8,9 +8,9 @@
     <title>English</title>
 </head>
 <body>
-    <div class="head">
-        <p><a href="test.html"><span class="lg_nm"> <em>Pratha</span></a><a href="reasoning.html"></em><span class="right_hd">Reasoning</span></a><a href="details.html"><span class="right_hd">Aptitude</span></a> <a href="english.html"><span class="right_hd">English</span></a> </p>
-    </div> 
+     <div class="head">
+        <p><a href="test.html"><span class="lg_nm"> <em>Pratha</span></a><a href="reasoning.html"></em><span class="right_hd">Reasoning</span></a><a href="details.html"><span class="right_hd">Aptitude</span></a> <a href="english.html"><span class="right_hd">English</span></a> <a href="engg.html"><span class="right_hd">Engineering</span></a> </p>
+    </div>
      <center><h1 id="eng">English</h1></center>
       <div class="container">
         <div class="tiles"><img src="images/Untitled design.png" alt=""><br><center><span id="title"> Active Passive Voice</span></center></div>
