--- a/details.html
+++ b/details.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="head">
-      <p><span class="lg_nm"><a href="test.html"> <em>Pratha</span></a><a href="reasoning.html"></em><span class="right_hd">Reasoning</span></a><a href="details.html"><span class="right_hd">Aptitude</span></a> <a href="english.html"><span class="right_hd">English</span></a> </p>
-    </div> 
+        <p><a href="test.html"><span class="lg_nm"> <em>Pratha</span></a><a href="reasoning.html"></em><span class="right_hd">Reasoning</span></a><a href="details.html"><span class="right_hd">Aptitude</span></a> <a href="english.html"><span class="right_hd">English</span></a> <a href="engg.html"><span class="right_hd">Engineering</span></a> </p>
+    </div>
      <center><h1>Aptitude</h1></center>
       <div class="container">
        <div class="tiles"><img src="images/Untitled design.png" alt=""><br><center><span id="title"> Numeric series</span></center></div>
